vpc-setup-template.yml
# This creates a VPC with two public subnets and two private subnets in two Availability Zones,
# together with a NAT Gateway and associated routing. Change the Availability Zone locations as needed.

# No warranty is implied in this example.

# Usage from command line:
#   aws cloudformation --region <<YOUR-REGION>> create-stack --stack-name vpc- --template-body file://vpc-setup.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: Template for setting up and complete VPC infrastructure

Parameters:
  AZ:
    Type: List<AWS::EC2::AvailabilityZone::Name>
    Description: "Select the two AZ for your subnets"
  EnvironmentName:
    Description: An environment name that is prefixed to resource names
    Type: String

Resources:
  ## VPC
  ProdVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/21
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-vpc

  ## SUBNETS
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ProdVPC
      AvailabilityZone: !Select [0, !Ref AZ]
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-public-subnet-1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ProdVPC
      AvailabilityZone: !Select [1, !Ref AZ]
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-public-subnet-2

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ProdVPC
      AvailabilityZone: !Select [0, !Ref AZ]
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-private-subnet-1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ProdVPC
      AvailabilityZone: !Select [1, !Ref AZ]
      CidrBlock: 10.0.4.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-private-subnet-2

  PrivateDBSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ProdVPC
      AvailabilityZone: !Select [0, !Ref AZ]
      CidrBlock: 10.0.5.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-private-DB-subnet-1

  PrivateDBSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ProdVPC
      AvailabilityZone: !Select [1, !Ref AZ]
      CidrBlock: 10.0.6.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-private-DB-subnet-2

  BastionSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ProdVPC
      AvailabilityZone: !Select [1, !Ref AZ]
      CidrBlock: 10.0.7.0/28
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-bastion-subnet

  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub ${EnvironmentName}-DB-security-group
      VpcId: !Ref ProdVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 10.0.3.0/24
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 10.0.4.0/24
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 10.0.7.0/28
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-DB-security-group

  PublicDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "PublicDBSubnetGroup"
      DBSubnetGroupName: !Sub ${EnvironmentName}-public-subnet-group
      SubnetIds:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-public-subnet-group

  PrivateDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "PrivateDBSubnetGroup"
      DBSubnetGroupName: !Sub ${EnvironmentName}-private-subnet-group
      SubnetIds:
        - !Ref PrivateDBSubnet1
        - !Ref PrivateDBSubnet2
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-private-subnet-group

  ## INTERNET GATEWAY
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-igw

  GatewayToInternet:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref ProdVPC
      InternetGatewayId: !Ref InternetGateway

  ## PUBLIC ROUTING
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ProdVPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-public-rt

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: GatewayToInternet
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  BastionSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref BastionSubnet
      RouteTableId: !Ref PublicRouteTable

  ## NAT GATEWAY
  NatGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: NatPublicIP
    Properties:
      SubnetId: !Ref PublicSubnet1
      AllocationId: !GetAtt NatPublicIP.AllocationId
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-natgw

  ## ELASTIC IP
  NatPublicIP:
    Type: AWS::EC2::EIP
    DependsOn: ProdVPC
    Properties:
      Domain: vpc
  ## PRIVATE ROUTING
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ProdVPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-private-rt

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      NatGatewayId: !Ref NatGateway
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  PrivateDBSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateDBSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateDBSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateDBSubnet2
      RouteTableId: !Ref PrivateRouteTable

  #Setting up NACL and rules
  PublicNacl:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref ProdVPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-public-nacl

  PublicNaclInboundRule1:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      Egress: false
      NetworkAclId:
        Ref: "PublicNacl"
      CidrBlock: "0.0.0.0/0"
      Protocol: -1
      RuleNumber: "100"
      RuleAction: "allow"

  PublicNaclOutboundRule1:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      Egress: true
      NetworkAclId:
        Ref: "PublicNacl"
      CidrBlock: "0.0.0.0/0"
      Protocol: "-1"
      RuleNumber: "100"
      RuleAction: "allow"

  BastionNacl:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref ProdVPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-bastion-nacl

  BastionNaclInboundRule1:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      Egress: false
      NetworkAclId:
        Ref: "BastionNacl"
      CidrBlock: "0.0.0.0/0"
      Protocol: -1
      RuleNumber: "100"
      RuleAction: "allow"

  BastionNaclOutboundRule1:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      Egress: true
      NetworkAclId:
        Ref: "BastionNacl"
      CidrBlock: "0.0.0.0/0"
      Protocol: "-1"
      RuleNumber: "100"
      RuleAction: "allow"

  PrivateNacl:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref ProdVPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-private-nacl

  PrivateNaclInboundRule1:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      Egress: false
      NetworkAclId:
        Ref: "PrivateNacl"
      CidrBlock: "10.0.1.0/24"
      Protocol: -1
      RuleNumber: "200"
      RuleAction: "allow"

  PrivateNaclInboundRule2:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      Egress: false
      NetworkAclId:
        Ref: "PrivateNacl"
      CidrBlock: "10.0.2.0/24"
      Protocol: -1
      RuleNumber: "210"
      RuleAction: "allow"

  PrivateNaclOutboundRule1:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      Egress: true
      NetworkAclId:
        Ref: "PrivateNacl"
      CidrBlock: "10.0.1.0/24"
      Protocol: "-1"
      RuleNumber: "200"
      RuleAction: "allow"

  PrivateNaclOutboundRule2:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      Egress: true
      NetworkAclId:
        Ref: "PrivateNacl"
      CidrBlock: "10.0.2.0/24"
      Protocol: "-1"
      RuleNumber: "210"
      RuleAction: "allow"

  PrivateDBNacl:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref ProdVPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-private-db-nacl

  PrivateDBNaclInboundRule1:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      Egress: false
      NetworkAclId:
        Ref: "PrivateDBNacl"
      CidrBlock: "10.0.5.0/24"
      Protocol: 6
      PortRange:
        From: 5432
        To: 5432
      RuleNumber: 210
      RuleAction: "allow"

  PrivateDBNaclInboundRule2:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      Egress: false
      NetworkAclId:
        Ref: "PrivateDBNacl"
      CidrBlock: "10.0.6.0/24"
      Protocol: 6
      PortRange:
        From: 5432
        To: 5432
      RuleNumber: 220
      RuleAction: "allow"

  PrivateDBBastionNaclInboundRule3:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      Egress: false
      NetworkAclId:
        Ref: "PrivateDBNacl"
      CidrBlock: "10.0.7.0/28"
      Protocol: 6
      PortRange:
        From: 5432
        To: 5432
      RuleNumber: 230
      RuleAction: "allow"

  PrivateDBNaclOutboundRule1:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      Egress: true
      NetworkAclId:
        Ref: "PrivateDBNacl"
      CidrBlock: "10.0.5.0/24"
      Protocol: 6
      PortRange:
        From: 5432
        To: 5432
      RuleNumber: 210
      RuleAction: "allow"

  PrivateDBNaclOutboundRule2:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      Egress: true
      NetworkAclId:
        Ref: "PrivateDBNacl"
      CidrBlock: "10.0.6.0/24"
      Protocol: 6
      PortRange:
        From: 5432
        To: 5432
      RuleNumber: 220
      RuleAction: "allow"

  #Associate subnets to respective NACLs
  PublicNaclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: "PublicSubnet1"
      NetworkAclId:
        Ref: "PublicNacl"

  PublicNaclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: "PublicSubnet2"
      NetworkAclId:
        Ref: "PublicNacl"

  BastionNaclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: "BastionSubnet"
      NetworkAclId:
        Ref: "BastionNacl"

  PrivateNaclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: "PrivateSubnet1"
      NetworkAclId:
        Ref: "PrivateNacl"

  PrivateNaclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: "PrivateSubnet2"
      NetworkAclId:
        Ref: "PrivateNacl"

  DBNaclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: "PrivateDBSubnet1"
      NetworkAclId:
        Ref: "PrivateDBNacl"

  DBNaclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: "PrivateDBSubnet2"
      NetworkAclId:
        Ref: "PrivateDBNacl"
